--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,24 @@
 {
   "manifest_version": 3,
-  "name": "Water Reminder",
-  "version": "1.2.0",
-  "description": "Reminds you to drink water at user-defined intervals with jokes and health tips",
-  "permissions": ["alarms", "notifications", "storage"],
-  "icons": {
-    "48": "icon48.png",
-    "128": "icon128.png",
-    "16": "icon16.png",
-    "32": "icon32.png"
-  },
+  "name": "Hydration Reminder",
+  "version": "1.1",
+  "description": "Reminds you to drink water at regular intervals.",
+  "permissions": ["storage", "notifications", "alarms"],
+  "host_permissions": [],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "48": "icon48.png"
+      "16": "icons/water-16.png",
+      "32": "icons/water-32.png",
+      "48": "icons/water-48.png",
+      "128": "icons/water-128.png"
     }
+  },
+  "icons": {
+    "16": "icons/water-16.png",
+    "32": "icons/water-32.png",
+    "48": "icons/water-48.png",
+    "128": "icons/water-128.png"
   },
   "background": {
     "service_worker": "background.js"
